# cleanmac

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.CN.md  README.md  SECURITY.md  aiflow.yaml  cleanmac.py  llms.txt  pyproject.toml  test_cleanmac.py
.agents/skills/cleanmac/: SKILL.md
.claude/: ecc-tools.json  identity.json
.claude/commands/: document-governance-or-migration-plan.md  migrate-unittest-to-pytest.md  update-pytest-governance-coverage.md
.claude/skills/cleanmac/: SKILL.md
.codex/: AGENTS.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bundle_audit.yml  ci.yml  codeql.yml  dependency-review.yml  nightly.yml  release.yml  scorecards.yml
cleancli/: __init__.py  ai_contract.py  ai_decision.py  ai_errors.py  ai_eval.py  ai_governance.py  ai_host_evidence.py  ai_host_integration.py  ai_host_policy.py  ai_policy.py  ai_readiness.py  ai_runbook.py  ai_schema.py  ai_self_test.py  ai_versioning.py  analyze.py  categories.py  clean.py  cli.py  core.py  delete_ops.py  finder.py  governance.py  mcp_prompts.py  mcp_resources.py  mcp_server.py  mcp_tools.py  models.py  optimize.py  paths.py  privacy.py  profiles.py  progress.py  protection.py  protection_data.py  purge.py  release_artifacts.py  release_orchestration.py  release_readiness.py  report_renderers.py  (+10 more)
docs/doc/: README.CN.md  README.md
docs/reference/: contracts.md
docs/superpowers/plans/: 2026-06-24-pytest-ai-contract-tests.md  2026-06-24-pytest-ai-governance-evidence-tests.md  2026-06-24-pytest-ai-host-policy-runbook-tests.md  (+14 more)
scripts/: audit_bundle_drift.py  cleanmac_mcp_server.py  generate_homebrew_formula.py  generate_release_manifest.py  generate_sbom.py  install.sh  quick_clean.sh  security_scan.py  test.sh
tests/: __init__.py  helpers.py  test_ai_concurrency.py  test_ai_contract.py  test_ai_decision_matrix.py  test_ai_errors.py  test_ai_eval.py  test_ai_governance.py  test_ai_host_evidence.py  test_ai_host_integration.py  test_ai_host_policy.py  test_ai_host_scenarios.py  test_ai_idempotency.py  test_ai_new_tools.py  test_ai_policy.py  test_ai_readiness.py  test_ai_runbook.py  test_ai_schema_exports.py  test_ai_self_test.py  test_ai_trace_persistence.py  test_ai_versioning.py  test_analyzer.py  test_app_protection.py  test_bundle_audit.py  test_clean_execution.py  test_cli_basics.py  test_cli_workflows.py  test_core_dispatch.py  test_delete_execution.py  test_delete_ops.py  test_error_taxonomy.py  test_group_containers.py  test_grouped_commands.py  test_inspect_governance.py  test_ios_backups.py  test_macos_real_smoke.py  test_makefile_governance.py  test_mcp_protocol.py  test_mcp_server.py  test_open_source_governance.py  (+34 more)
tests/data/: dangerous_paths.txt
(+2 files in other folders)
